src/pages/ar-ae/v1.22.0/plugins/pinia.mdx
---
title: "Pinia"
metaTitle: "Pinia"
metaDescription: "إضافة Pinia لـ OpenReplay."
---
import Aside from '~/components/Aside.astro'

تتيح لك هذه الإضافة التقاط تغييرات/حالة `Pinia` وفحصها لاحقًا أثناء إعادة تشغيل تسجيلات الجلسات. هذا مفيد جدًا لفهم المشكلات وإصلاحها.


<Aside type="tip">
  لدينا أيضًا درس تعليمي مفصل حول كيفية استخدام إضافة Pinia لالتقاط حالة تطبيقك عند استخدام هذه المكتبة، يمكنك الاطلاع عليه [هنا](/tutorials/pinia).
</Aside>




## التثبيت

```bash
npm i @openreplay/tracker-vuex
```

## الاستخدام

قم بتهيئة حزمة `@openreplay/tracker` كالمعتاد وحمّل الإضافة فيها. استدعِ الإضافة واضبط اسم المتجر (store)، وسيؤدي ذلك إلى إرجاع نسخة مسمّاة من متعقب المتجر يمكنك استدعاؤها مع نسخة متجرك كوسيطة لتمكين تتبع هذا المتجر.

### إذا كان موقعك تطبيق صفحة واحدة (SPA)

```js
import OpenReplay from '@openreplay/tracker';
import trackerVuex from '@openreplay/tracker-vuex';
```

### إذا كان تطبيق الويب الخاص بك يُعرض من جهة الخادم (SSR)

```js
import OpenReplay from '@openreplay/tracker/cjs';
import trackerVuex from '@openreplay/tracker-vuex/cjs';
```

### تتبع متجر Pinia

```js

//...
import { tracker } from '@openreplay/tracker';

tracker.configure({
  projectKey: 'YOUR_PROJECT_KEY',
  ingestPoint: "https://openreplay.mydomain.com/ingest", // when dealing with the self-hosted version of OpenReplay
});

// ...

const examplePiniaStore = useExamplePiniaStore()
const vuexPlugin = tracker.use(trackerVuex(<options>)) // check list of available options below

const piniaStorePlugin = vuexPlugin('STORE NAME') // add a name to your store, 
                                                  // optional (will be randomly generated otherwise)
piniaStorePlugin(examplePiniaStore) // start tracking state updates

// now you can use examplePiniaStore as usual pinia store (destructure values or return it as a whole etc)
```

## الخيارات

يمكنك تخصيص سلوك الإضافة باستخدام خيارات لتنقية بياناتك. وهي مشابهة لتلك الموجودة في الإضافة القياسية `createLogger`.

```js
trackerVuex({
  filter (mutation, state) {
    // returns `true` if a mutation should be logged
    // `mutation` is a `{ type, payload }`
    return mutation.type !== "aBlacklistedMutation";
  },
  transformer (state) {
    // transforms the state before logging it.
    // for example return only a specific sub-tree
    return state.subTree;
  },
  mutationTransformer (mutation) {
    // mutations are logged in the format of `{ type, payload }`
    // we can format it any way we want.
    return mutation.type;
  },
})
```

## الدرس التعليمي

إذا كنت تبحث عن مثال عملي حول كيفية استخدام هذه الإضافة لالتقاط تغييرات الحالة في عمليات إعادة تشغيل الجلسات، فاطّلع على [درسنا التعليمي المفصّل هنا](/tutorials/pinia).

## لديك أسئلة؟

هل تواجه مشكلة في إعداد هذه الإضافة؟ يُرجى الانضمام إلى [Slack](https://slack.openreplay.com) الخاص بنا أو الاطلاع على [المنتدى](https://forum.openreplay.com) الخاص بنا للحصول على المساعدة من مجتمعنا.
